Fixed Dark Mode Time Filter Issue
I made some adjustments to dark mode such that both light mode and dark mode can display user options correctly, and switching between light and dark mode would affect user outputs.

--- a/src/web/src/assets/dark.scss
+++ b/src/web/src/assets/dark.scss
@@ -274,7 +274,6 @@
   background-clip: padding-box;
   border-radius: 0.25rem;
   color: var(--dark-text-primary) !important;
-  background-color: var(--dark-primary) !important;
   border: 1px solid var(--dark-border-primary);
 }
 
